Adding contents to the HTML file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg">
+
+  <div class="parent">
+
+    <div class="learn">
+      <h1 class="heading">Learn to code by watching others</h1>
+      <p class="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur velit ullam voluptas. Rem dolores saepe, quaerat sequi eum quod repellendus voluptates tempora molestias adipisci delectus voluptatem, aliquam assumenda odio ex!</p>
+    </div>
+
+    <div class="sign-up">
+      <p class="try">Try it free for seven days</p>
+      <form action="" class="form">
+        <input type="text" class="block">
+        <input type="text" class="block">
+        <input type="text" class="block">
+        <input type="text" class="block">
+        <button class="green">Claim your free trial</button>
+        <p class="terms">By clicking this button, you are agreeing to our terms and conditions</p>
+      </form>
+    </div>
+    
+  </div>
   
 </body>
 </html>
