Adding contents to the HTML file

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="sign-up">
       <p class="try">Try it free for seven days</p>
       <form action="" class="form">
-        <input type="text" class="block">
-        <input type="text" class="block">
-        <input type="text" class="block">
-        <input type="text" class="block">
+        <input type="text" placeholder="First Name" class="block">
+        <input type="text" placeholder="Last Name" class="block">
+        <input type="email" placeholder="Email Address" class="block">
+        <input type="password" placeholder="Password" class="block">
         <button class="green">Claim your free trial</button>
         <p class="terms">By clicking this button, you are agreeing to our terms and conditions</p>
       </form>
     </div>
-    
+
   </div>
   
 </body>
