Adding contents to the HTML file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="text" placeholder="Last Name" class="block">
         <input type="email" placeholder="Email Address" class="block">
         <input type="password" placeholder="Password" class="block">
-        <button class="green">Claim your free trial</button>
+        <button class="green">CLAIM YOUR FREE TRIAL</button>
         <p class="terms">By clicking this button, you are agreeing to our terms and conditions</p>
       </form>
     </div>
